--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ nav ul{
 
 nav a{
     text-decoration: none;
-    text-align: center;
     color: #eee;
     display: block;
     padding: 20px;
@@ -15,7 +14,7 @@ nav a:hover{
     color: black;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px){
     nav ul{
         display: flex;
     }
@@ -25,14 +24,54 @@ nav a:hover{
     }
 }
 
-.container{
+#container{
     display: grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-template-rows: repeat(6,1fr);
-    grid-gap: 10px;
+    grid-auto-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    max-width: 960px;
+    grid-gap: 25px;
+    margin: auto;
+    grid-template-areas: 
+    "header header header"
+    "main main aside"
+    "main main aside"
+    "article article aside"
+    "article article aside"
+    "article article mail"
+    "footer footer footer";
 }
 
-nav, .main, .aside, .footer, .article, header {
+.header{
+    grid-area: header;
+}
+
+.main{
+    grid-area: main;
+}
+
+.mail{
+    grid-area: mail;
+}
+
+.article{
+    grid-area: article;
+}
+
+.aside{
+    grid-area: aside;
+}
+
+.footer{
+    grid-area: footer;
+}
+
+nav, .main, .aside, .footer, .article, header, .mail{
     background: black;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
 }
 
