--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 nav ul{
     list-style-type: none;
+    padding-top: 10px;
 }
 
 nav a{
     text-decoration: none;
     color: #eee;
-    display: block;
     padding: 20px;
 }
 
@@ -22,22 +22,25 @@ nav a:hover{
     nav li{
         flex: 1 1 0;
     }
+
 }
 
 #container{
     display: grid;
-    grid-auto-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(100px, auto);
-    max-width: 960px;
-    grid-gap: 25px;
+    max-width: 1200px;
+    background-color: black;
     margin: auto;
-    grid-template-areas: 
+    grid-template-areas:
+    "nav nav nav" 
     "header header header"
-    "main main aside"
-    "main main aside"
-    "article article aside"
-    "article article aside"
-    "article article mail"
+    "main main main"
+    "main main main"
+    "main main main"
+    "aside aside aside"
+    "aside aside aside"
+    "article article article"
+    "article article article"
     "footer footer footer";
 }
 
@@ -65,13 +68,32 @@ nav a:hover{
     grid-area: footer;
 }
 
-nav, .main, .aside, .footer, .article, header, .mail{
+nav, .aside, article, .footer, header, .mail{
     background: black;
 }
 
 form{
     display: flex;
     justify-content: center;
-    padding-top: 30px;
+    padding-bottom: 20px;
 }
 
+footer p{
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
+
+nav{
+    position: fixed;
+    top: 0;
+    grid-area: nav;
+    width: 100%;
+    max-width: 1200px;
+    margin-left: -45px;
+}
+
+.main img{
+    width: 100%;
+    height: 100%;
+}
