--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav a:hover{
     background-color: black;
     margin: auto;
     grid-template-areas:
-    "nav nav nav" 
+    "nav nav nav"
     "header header header"
     "main main main"
     "main main main"
@@ -41,7 +41,7 @@ nav a:hover{
     "footer footer footer";
 }
 
-.header{
+#header{
     grid-area: header;
 }
 
@@ -76,23 +76,18 @@ footer p{
     color: white;
     text-align: center;
 }
-/* 
-nav{
-    position: fixed;
-    top: 0;
-    grid-area: nav;
-    max-width: 1200px;   
-} */
 
 #main img{
     width: 100%;
     height: 100%;
 }
+
 #nav-bar{
     grid-area: nav;
     position: relative;
     bottom: 50px;
 }
+
 html{
     background: black;
 }
